# routes/reviewRoute.js
@@ -3,10 +3,10 @@ const router = express.Router();
 const ReviewController = require('../controllers/reviewController');
 const { authenticateToken, authorizeRole } = require('../middlewares/authetication');
 
-router.get('/', ReviewController.getAllReviews);
+router.get('/', ReviewController.getByProductId);
 router.get('/:id', ReviewController.getReviewById);
-router.post('/', authenticateToken, ReviewController.createReview);
-router.put('/:id', authenticateToken, ReviewController.updateReview);
-router.delete('/:id', authenticateToken, ReviewController.deleteReview);
+router.post('/', authenticateToken, ReviewController.create);
+router.put('/:id', authenticateToken, ReviewController.update);
+router.delete('/:id', authenticateToken, ReviewController.delete);
 
 module.exports = router;
